--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>KK HOMOEO CARE - HOMOEOPATHIC TREATMENT</title>
+    <title>MEDISPHERE</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
    
     <!-- Favicon -->
@@ -35,9 +35,9 @@
             <div class="row">
                 <div class="col-md-6 text-center text-lg-start mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-decoration-none text-body pe-3" href=""><i class="bi bi-telephone me-2"></i>+91 6239568483</a>
+                        <a class="text-decoration-none text-body pe-3" href=""><i class="bi bi-telephone me-2"></i>+91 6283087875</a>
                         <span class="text-body">|</span>
-                        <a class="text-decoration-none text-body px-3" href=""><i class="bi bi-envelope me-2"></i>kkhomoeocareonline@gmail.com</a>
+                        <a class="text-decoration-none text-body px-3" href=""><i class="bi bi-envelope me-2"></i>medisphere@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-md-6 text-center text-lg-end">
@@ -70,7 +70,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-clinic-medical me-2"></i>KK Homoeo Care</h1>
+                    <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-clinic-medical me-2"></i>MEDI SPHERE</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -95,8 +95,8 @@
         <div class="container py-5">
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
-                    <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5" style="border-color: rgba(256, 256, 256, .3) !important;">Welcome To KK Homoeo Care</h5>
-                    <h1 class="display-1 text-white mb-md-4">Best Healthcare Solution Online</h1>
+                    <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5" style="border-color: rgba(256, 256, 256, .3) !important;">Welcome To MEDI SPHERE</h5>
+                    <h1 class="display-1 text-white mb-md-4">India’s One-Stop Solution for Smarter Healthcare</h1>
                     <div class="pt-2">
                         <a href="" class="btn btn-light rounded-pill py-md-3 px-md-5 mx-2">Enter Disease</a>
                         <a href="" class="btn btn-outline-light rounded-pill py-md-3 px-md-5 mx-2">Book Appointment</a>
@@ -122,7 +122,9 @@
                         <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">About Us</h5>
                         <h1 class="display-4">Best Medical Care For Yourself and Your Family</h1>
                     </div>
-                    <p>At KK Homoeo Care, we are dedicated to providing holistic and personalized homeopathic healthcare solutions. Our mission is to promote wellness and support individuals on their journey towards optimal health and well-being. </p>
+                    <p>At our platform, we bring every essential healthcare service together—doctor consultations, appointment booking, diagnostic tests, and wellness support.
+We exist to make healthcare effortless, transparent, and accessible for everyone.
+With trusted professionals and seamless technology, we ensure complete care in one reliable space. </p>
                     <div class="row g-3 pt-3">
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
@@ -169,7 +171,7 @@
                         <div class="service-icon mb-4">
                             <i class="fa fa-2x fa-user-md text-white"></i>
                         </div>
-                        <h4 class="mb-3">Homoeopathic Emergency Care</h4>
+                        <h4 class="mb-3"> Emergency Care</h4>
                         <p class="m-0">You can call us anytime for any kind of medcial Emergency. We are available 24*7. </p>
                         <a class="btn btn-lg btn-primary rounded-pill" href="">
                             <i class="bi bi-arrow-right"></i>
@@ -193,8 +195,8 @@
                         <div class="service-icon mb-4">
                             <i class="fa fa-2x fa-stethoscope text-white"></i>
                         </div>
-                        <h4 class="mb-3">Outdoor Checkup</h4>
-                        <p class="m-0">Our doctors are always availablefor any kind of home Treatment.(extra fees)</p>
+                        <h4 class="mb-3">Real Time Medical Assistance</h4>
+                        <p class="m-0">Get real-time medical guidance with our seamless video call consultation service.</p>
                         <a class="btn btn-lg btn-primary rounded-pill" href="">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -249,7 +251,7 @@
                 <div class="col-lg-6 mb-5 mb-lg-0">
                     <div class="mb-4">
                         <h5 class="d-inline-block text-white text-uppercase border-bottom border-5">Appointment</h5>
-                        <h1 class="display-4">Make An Appointment For Your Yourself</h1>
+                        <h1 class="display-4">Make An Appointment For Yourself and your Loved Ones</h1>
                     </div>
                     <p class="text-white mb-5">Fill all your details in the forms and click on 'make an appointment' so that our tech Professionals can book an Online Appointment slot for you!</p>
                     <!-- <a class="btn btn-dark rounded-pill py-3 px-5 me-3" href="">Disease regarding call  </a> -->
@@ -319,7 +321,7 @@
     <!-- Appointment End -->
 
   <!-- Team Start -->
-  <div class="container-fluid py-5">
+  <!-- <div class="container-fluid py-5">
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
             <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Appointment procedure</h5>
@@ -348,7 +350,8 @@
 <ul>Enter the time you will be available on that date for the online meet.</ul>
 <li>Then click on 'make an appointment' button</li><br>
 <li>Then pay the respective amount and your appointment will be booked and you will have a call on your phone number, message, email very soon for the confirmation of your appointment booked by our team!</li>
-</div>
+</div> -->
+
 
 
          <!-- <div class="owl-carousel team-carousel position-relative">
@@ -409,9 +412,9 @@
                     </div>
                 </div>
             </div>  -->
-        </div>
+        <!-- </div>
     </div>
-</div> 
+</div>  -->
 <!-- Team End -->
     <!-- Pricing Plan Start -->
     <div class="container-fluid py-5">
