--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>KK HOMOEO CARE - HOMOEOPATHIC TREATMENT</title>
+    <title>MEDISPHERE</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
    
 
@@ -36,9 +36,9 @@
             <div class="row">
                 <div class="col-md-6 text-center text-lg-start mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-decoration-none text-body pe-3" href=""><i class="bi bi-telephone me-2"></i>+91 6239568483</a>
+                        <a class="text-decoration-none text-body pe-3" href=""><i class="bi bi-telephone me-2"></i>+91 62830 87875</a>
                         <span class="text-body">|</span>
-                        <a class="text-decoration-none text-body px-3" href=""><i class="bi bi-envelope me-2"></i>kkhomoeocareonline@gmail.com</a>
+                        <a class="text-decoration-none text-body px-3" href=""><i class="bi bi-envelope me-2"></i>medishere@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-md-6 text-center text-lg-end">
@@ -71,7 +71,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-clinic-medical me-2"></i>KK Homoeo Care</h1>
+                    <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-clinic-medical me-2"></i>Medi Sphere</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -107,23 +107,16 @@
                     </div>
                     <p>
 
-                        Welcome to KK Homoeo Care!<br>
+                        <i><b>Welcome to Medi Sphere!</b></i><br>
                         
-                        At KK Homoeo Care, we are dedicated to providing holistic and personalized homeopathic healthcare solutions. Our mission is to promote wellness and support individuals on their journey towards optimal health and well-being.<br>
-                        <br>
-                        With a team of experienced and compassionate homeopathic practitioners, we strive to offer high-quality care that addresses the unique needs of each individual. We believe in treating the person as a whole, taking into account their physical, mental, and emotional aspects, to achieve lasting results.
-                        <br><br>
-                        Our approach is rooted in the principles of classical homeopathy, which focuses on stimulating the body's innate healing abilities. By carefully selecting individualized remedies, we aim to restore balance and harmony, working towards the resolution of both acute and chronic conditions.
-                        <br><br>
-                        At KK Homoeo Care, we value the importance of establishing a trusting and collaborative relationship with our patients. We take the time to listen attentively, understand your concerns, and develop a customized treatment plan tailored to your specific needs. Our goal is to empower you with knowledge and guidance, enabling you to actively participate in your own healing process.
-                        <br><br>
-                        Our commitment to excellence extends beyond our patient care. We prioritize ongoing professional development and stay updated with the latest research and advancements in homeopathy. This ensures that we provide you with the most effective and evidence-based treatments available.
-                        <br><br>
-                        We also maintain a warm and welcoming environment in our clinic, where you can feel comfortable and supported throughout your healing journey. Our team is dedicated to creating a safe space where you can openly discuss your health concerns and receive the highest standard of care.
-                        <br><br>
-                        Whether you're seeking relief from a chronic condition, looking to enhance your overall well-being, or simply curious about the benefits of homeopathy, KK Homoeo Care is here for you. We invite you to explore our services, get in touch with our team, and embark on a path towards improved health and vitality.
-                        <br><br>
-                        Discover the transformative power of homeopathy with KK Homoeo Care. Your well-being is our priority!</p>
+                        Our platform is a complete one-stop digital healthcare solution designed to make medical services easier, faster, and more accessible for everyone. We bring together doctor consultations, appointment booking, diagnostic checkups, and virtual medical support—all on a single, user-friendly webapp. With a strong focus on convenience and trust, we connect patients with certified doctors through secure video calls, allowing them to receive expert medical guidance from the comfort of their homes.</p>
+
+<p>We simplify the entire healthcare journey by offering real-time appointment scheduling, organized patient records, and access to various health checkup packages without the need to visit multiple clinics or hospitals. Our mission is to combine technology with quality medical care to provide reliable, seamless, and transparent healthcare experiences for all users.</p>
+
+<p>Whether you need quick medical advice, want to consult a specialist, book a test, or manage your health checkups, our platform brings everything together—creating a smarter, more efficient way to take care of your health.</p>
+
+
+</p>
                     <div class="row g-3 pt-3">
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
