--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-md-6 text-center text-lg-start mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-decoration-none text-body pe-3" href=""><i class="bi bi-telephone me-2"></i>+91 6283087875</a>
+                        <a class="text-decoration-none text-body pe-3" href=""><i class="bi bi-telephone me-2"></i>+91 62830 87875</a>
                         <span class="text-body">|</span>
                         <a class="text-decoration-none text-body px-3" href=""><i class="bi bi-envelope me-2"></i>medisphere@gmail.com</a>
                     </div>
@@ -114,7 +114,7 @@
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100 rounded" src="img/ChatGPT Image Jan 28, 2026, 01_18_23 PM.png" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100 rounded" src="img/consult.jpg" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-7">
