--- a/doctor.html
+++ b/doctor.html
@@ -97,8 +97,8 @@
                     <p><i class="bi bi-briefcase"></i> 40 Years Experience</p>
                     <p><i class="bi bi-cash"></i> ₹2800 Fees</p>
 
-                    <a href="doctor-profile.html" class="doctor-btn mt-2 d-block text-center">View Full Profile</a>
-                    <a href="doctor-profile.html" class="doctor-btn mt-2 d-block text-center">Book Appointment</a>
+                    <a href="anoop.html" class="doctor-btn mt-2 d-block text-center">View Full Profile</a>
+                    <a href="anoop.html" class="doctor-btn mt-2 d-block text-center">Book Appointment</a>
                 </div>
             </div>
 
@@ -111,8 +111,8 @@
                     <p><i class="bi bi-briefcase"></i> 35 Years Experience</p>
                     <p><i class="bi bi-cash"></i> ₹2000 Fees</p>
 
-                    <a href="bookappointment.html" class="doctor-btn mt-2 d-block text-center">View Full Profile</a>
-                    <a href="bookappointment.html" class="doctor-btn mt-2 d-block text-center">Book Appointment</a>
+                    <a href="bookappointment_manjinder.html" class="doctor-btn mt-2 d-block text-center">View Full Profile</a>
+                    <a href="bookappointment_manjinder.html" class="doctor-btn mt-2 d-block text-center">Book Appointment</a>
                 </div>
             </div>
 
@@ -125,8 +125,8 @@
                     <p><i class="bi bi-briefcase"></i> 25 Years Experience</p>
                     <p><i class="bi bi-cash"></i> ₹1500 Fees</p>
 
-                    <a href="doctor-profile.html" class="doctor-btn mt-2 d-block text-center">View Full Profile</a>
-                    <a href="doctor-profile.html" class="doctor-btn mt-2 d-block text-center">Book Appointment</a>
+                    <a href="amit.html".html" class="doctor-btn mt-2 d-block text-center">View Full Profile</a>
+                    <a href="amit.html" class="doctor-btn mt-2 d-block text-center">Book Appointment</a>
                 </div>
             </div>
 
