--- a/amit.html
+++ b/amit.html
@@ -34,8 +34,13 @@
                 <h1 class="m-0 text-primary">MediSphere</h1>
                 <div class="collapse navbar-collapse">
                     <div class="navbar-nav ms-auto">
-                        <a href="#" class="nav-link">Home</a>
-                        <a href="#" class="nav-link">Find Specialist</a>
+                         <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="service.html" class="nav-item nav-link">Service</a>
+                        <a href="price.html" class="nav-item nav-link">Pricing</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="labtest.html" class="nav-item nav-link">Lab Test</a>
+                        <a href="amit.html" class="nav-link">Find Specialist</a>
                     </div>
                 </div>
             </nav>
