--- a/bookappointment_manjinder.html
+++ b/bookappointment_manjinder.html
@@ -135,13 +135,13 @@
 
                 <div class="collapse navbar-collapse" id="nav">
                     <div class="navbar-nav ms-auto">
-                        <a href="#" class="nav-link">Home</a>
-                        <a href="#" class="nav-link">About</a>
-                        <a href="#" class="nav-link">Service</a>
-                        <a href="#" class="nav-link">Pricing</a>
-                        <a href="#" class="nav-link">Contact</a>
-                        <a href="#" class="nav-link">Lab Test</a>
-                        <a href="#" class="nav-link active">Find Specialist</a>
+                        <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="service.html" class="nav-item nav-link">Service</a>
+                        <a href="price.html" class="nav-item nav-link">Pricing</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="labtest.html" class="nav-item nav-link">Lab Test</a>
+                        <a href="bookappointment_manjinder.html" class="nav-link active">Find Specialist</a>
                     </div>
                 </div>
             </nav>
